# agentic-video-rag

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/spec/: groundtruth.yaml
config/spec/overrides/: dev.yaml
design/: execution_plan.md  known_limitations.md  ops_runbook.md  release_signoff_checklist.md  rollback_notes.md  spec_groundtruth.md  spec_v1.txt
scripts/: run_pipeline_demo.py  validate_runtime_config.py
src/agentic_video_rag/: __init__.py  adapters.py  demo_data.py  orchestrator_contract.py  orchestrator_runtime.py  pipeline.py  spec_loader.py  spec_schema.py  stores.py  types.py  utils.py
tests/: test_orchestration_runtime.py  test_orchestrator_contract.py  test_pipeline_phases.py  test_spec_config.py
