[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-video-rag"
version = "0.1.0"
description = "Agentic Video RAG runtime config and orchestration contracts"
requires-python = ">=3.11"
dependencies = [
  "omegaconf>=2.3.0,<3.0.0",
  "pydantic>=2.12.0,<3.0.0",
]
